<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/iv_detail_picture"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:maxHeight="400dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tv_detail_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_detail_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >
        
        <TableRow
            android:id="@+id/tableRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_detail_email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_label"/>

            <EditText
                android:id="@+id/et_detail_email_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" >

                <requestFocus />
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_detail_url_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/url_label"/>

            <EditText
                android:id="@+id/et_detail_url_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textUri" />

        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_detail_latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude_label"/>

            <TextView
                android:id="@+id/tv_detail_latitude_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_detail_longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitude_label"/>

            <TextView
                android:id="@+id/tv_detail_longitude_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_detail_datetime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/datetime_label" />

            <TextView
                android:id="@+id/tv_detail_datetime_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"/>
        </TableRow>
        

        <TableRow
            android:id="@+id/tableRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_detail_address_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_label"/>

            <TextView
                android:id="@+id/tv_detail_address_label_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"/>
        </TableRow>
</TableLayout>

</LinearLayout>
